[gd_scene load_steps=16 format=3 uid="uid://bpyvpqh2skuxr"]

[ext_resource type="Script" path="res://scripts/npc.gd" id="1_2wd24"]
[ext_resource type="Texture2D" uid="uid://5x17jp1jmbb" path="res://sprites/Npc.png" id="1_v3rf6"]
[ext_resource type="Texture2D" uid="uid://c818oif5br2bv" path="res://sprites/WindowDialog.png" id="3_wv8uo"]
[ext_resource type="Texture2D" uid="uid://cs3l46md4fkwh" path="res://sprites/ButtonE.png" id="4_hjncy"]
[ext_resource type="Script" path="res://scripts/quest.gd" id="5_cu0o7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfqqq"]

[sub_resource type="Animation" id="Animation_han4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog/ButtonE:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_w8mo8"]
resource_name = "button_e"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialog/ButtonE:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jrpk4"]
_data = {
"RESET": SubResource("Animation_han4y"),
"button_e": SubResource("Animation_w8mo8")
}

[sub_resource type="FontVariation" id="FontVariation_1al4o"]
spacing_bottom = -9

[sub_resource type="LabelSettings" id="LabelSettings_h4lrr"]
font = SubResource("FontVariation_1al4o")

[sub_resource type="FontVariation" id="FontVariation_8svwj"]

[sub_resource type="LabelSettings" id="LabelSettings_okgh7"]
font = SubResource("FontVariation_8svwj")

[sub_resource type="Curve" id="Curve_kcyb6"]
max_value = 1.5
_data = [Vector2(0, 0.483516), 0.0, 0.0, 0, 0, Vector2(0.507463, 1.21978), 0.0, 0.0, 0, 0, Vector2(0.99999, 0.478022), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_ev0c1"]
colors = PackedColorArray(1, 0.784314, 0, 1, 1, 0.47451, 0, 1)

[node name="Npc" type="Area2D" node_paths=PackedStringArray("quest")]
scale = Vector2(3, 3)
script = ExtResource("1_2wd24")
quest = NodePath("Quest")
texts = Array[String](["Привет!", "Меня зовут Данила!", "Рад знакомству!"])
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rfqqq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v3rf6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jrpk4")
}
autoplay = "button_e"

[node name="Dialog" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -44.6667
offset_right = 36.0
offset_bottom = -4.66667

[node name="BackgroundText" type="TextureRect" parent="Dialog"]
layout_mode = 0
offset_left = -22.6667
offset_top = 14.3334
offset_right = 31.3333
offset_bottom = 33.3334
texture = ExtResource("3_wv8uo")
expand_mode = 1

[node name="Label" type="Label" parent="Dialog/BackgroundText"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.074
anchor_top = 0.053
anchor_right = 0.937
anchor_bottom = 1.0
offset_left = 0.00399995
offset_top = -0.00700009
offset_right = 137.402
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.253333, 0.253333)
text = "Hello! My name is Danila! What's you name?"
label_settings = SubResource("LabelSettings_h4lrr")
autowrap_mode = 3

[node name="ButtonE" type="TextureRect" parent="Dialog"]
layout_mode = 0
offset_left = 22.0
offset_top = 12.0
offset_right = 33.0
offset_bottom = 23.0
texture = ExtResource("4_hjncy")
expand_mode = 1

[node name="LabelCounter" type="Label" parent="Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.466667
anchor_right = 0.485
anchor_bottom = 0.639167
offset_right = 19.6
offset_bottom = 19.7225
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(15.5556, 11.1111)
text = "1/3"
label_settings = SubResource("LabelSettings_okgh7")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Quest" type="Node" parent="."]
script = ExtResource("5_cu0o7")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 32
lifetime = 1.5
speed_scale = 1.5
emission_shape = 3
emission_rect_extents = Vector2(10, 10)
direction = Vector2(0, -45)
gravity = Vector2(0, 0)
initial_velocity_max = 15.0
tangential_accel_min = -25.0
tangential_accel_max = 25.0
damping_max = 20.0
angle_max = 360.0
scale_amount_min = 0.1
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_kcyb6")
color = Color(1, 0.709804, 0.298039, 1)
color_ramp = SubResource("Gradient_ev0c1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
